# minisamd21

./: .clang-format  .gitignore  CMakeLists.txt  README.md
inc/minisamd21/: AdcInput.hpp  I2C.hpp  Pin.hpp  PwmOutput.hpp  Sleep.hpp  System.hpp
inc/minisamd21/dev/: AT24XX.hpp  DS3231.hpp  OutShiftRegister.hpp
platform/CMSIS-Atmel/1.2.2/CMSIS/Device/ATMEL/samd21/include/: samd21e15a.h  samd21e16a.h  samd21e17a.h  samd21e18a.h  samd21g15a.h  samd21g16a.h  samd21g17a.h  samd21g17au.h  samd21g18a.h  samd21g18au.h  samd21j15a.h  samd21j16a.h  samd21j17a.h  samd21j18a.h
platform/linker_scripts/: SAMD21E18A_w_bootloader.ld
scripts/: upload.jlink
src/: AdcInput.cpp  I2C.cpp  Pin.cpp  PwmOutput.cpp  Sleep.cpp  System.cpp  main.cpp  samd21_startup.c
src/dev/: AT24XX.cpp  DS3231.cpp  OutShiftRegister.cpp
